[gd_scene load_steps=16 format=3 uid="uid://x2xqnsmopwla"]

[ext_resource type="Script" path="res://Scripts/TileBody.gd" id="1_yjxja"]
[ext_resource type="Script" path="res://Scripts/Plant_State_Machine.gd" id="2_yrq3p"]
[ext_resource type="Script" path="res://States/base_state.gd" id="3_7prur"]
[ext_resource type="Script" path="res://States/plant_state.gd" id="4_rkb14"]
[ext_resource type="Script" path="res://States/root_state.gd" id="5_jfqbc"]
[ext_resource type="Script" path="res://States/vine_state.gd" id="6_k4il1"]
[ext_resource type="Script" path="res://States/both_state.gd" id="7_2yniu"]
[ext_resource type="Texture2D" uid="uid://blbebai4humnn" path="res://PrototypeBlocks/MCBlocksBlackOutline.png" id="8_jmf27"]
[ext_resource type="Script" path="res://Scenes/UpgradeManager.gd" id="9_gd60i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jqtls"]
atlas = ExtResource("8_jmf27")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qusbo"]
atlas = ExtResource("8_jmf27")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5hj8"]
atlas = ExtResource("8_jmf27")
region = Rect2(416, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxeun"]
atlas = ExtResource("8_jmf27")
region = Rect2(448, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ek3o"]
atlas = ExtResource("8_jmf27")
region = Rect2(384, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6rgtp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqtls")
}],
"loop": true,
"name": &"Base",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qusbo")
}],
"loop": true,
"name": &"Plant",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5hj8")
}],
"loop": true,
"name": &"Rooted",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxeun")
}],
"loop": true,
"name": &"RootedAndVined",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ek3o")
}],
"loop": true,
"name": &"Vined",
"speed": 5.0
}]

[node name="TileBody" type="AnimatableBody2D" node_paths=PackedStringArray("menu")]
script = ExtResource("1_yjxja")
menu = NodePath("PopupMenu")

[node name="Plant_State_Machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("2_yrq3p")
starting_state = NodePath("plant_state")

[node name="base_state" type="Node" parent="Plant_State_Machine" node_paths=PackedStringArray("plant_state", "root_state", "vine_state")]
script = ExtResource("3_7prur")
plant_state = NodePath("../plant_state")
root_state = NodePath("../root_state")
vine_state = NodePath("../vine_state")
sprite_name = "Base"

[node name="plant_state" type="Node" parent="Plant_State_Machine"]
script = ExtResource("4_rkb14")
sprite_name = "Plant"

[node name="root_state" type="Node" parent="Plant_State_Machine" node_paths=PackedStringArray("both_state")]
script = ExtResource("5_jfqbc")
both_state = NodePath("../both_state")
sprite_name = "Rooted"

[node name="vine_state" type="Node" parent="Plant_State_Machine" node_paths=PackedStringArray("both_state")]
script = ExtResource("6_k4il1")
both_state = NodePath("../both_state")
sprite_name = "Vined"

[node name="both_state" type="Node" parent="Plant_State_Machine"]
script = ExtResource("7_2yniu")
sprite_name = "RootedAndVined"

[node name="PopupMenu" type="PopupMenu" parent="."]
title = "Plant Menu"
size = Vector2i(132, 95)
item_count = 3
item_0/text = "Grow Leaves"
item_0/id = 0
item_1/text = "Grow Roots"
item_1/id = 1
item_2/text = "Spread Seeds"
item_2/id = 2

[node name="TileSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_6rgtp")
animation = &"Base"

[node name="TileCollision" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PackedVector2Array(-2, -12, 2, -12, 2, -11, 4, -11, 4, -10, 6, -10, 6, -9, 8, -9, 8, -8, 10, -8, 10, -7, 12, -7, 12, 7, 10, 7, 10, 8, 8, 8, 8, 9, 6, 9, 6, 10, 4, 10, 4, 11, 2, 11, 2, 12, -2, 12, -2, 11, -4, 11, -4, 10, -6, 10, -6, 9, -8, 9, -8, 8, -10, 8, -10, 7, -12, 7, -12, -7, -10, -7, -10, -8, -8, -8, -8, -9, -6, -9, -6, -10, -4, -10, -4, -11, -2, -11)

[node name="MouseDetection" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MouseDetection"]
polygon = PackedVector2Array(-2, -12, 2, -12, 12, -7, 2, -1, -2, -1, -12, -6, -12, -7)

[node name="AdjecentPlantDetection" type="Area2D" parent="."]
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AdjecentPlantDetection"]
polygon = PackedVector2Array(0, -11, -10, -7, 0, -2, 11, -7)

[node name="UpgradeManager" type="Node2D" parent="." node_paths=PackedStringArray("base_state")]
script = ExtResource("9_gd60i")
base_state = NodePath("../Plant_State_Machine/plant_state")

[connection signal="index_pressed" from="PopupMenu" to="." method="_on_popup_menu_index_pressed"]
[connection signal="input_event" from="MouseDetection" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="MouseDetection" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="MouseDetection" to="." method="_on_area_2d_mouse_exited"]
[connection signal="body_entered" from="AdjecentPlantDetection" to="Plant_State_Machine/plant_state" method="_on_adjecent_plant_detection_body_entered"]
